불규칙토큰 lattice에 추가하는 로직 수정 (#102)
* 불규칙토큰 lattice에 추가하는 로직 수정

* 주석제거 및 코드 정리

* 변수이름 수정

* 코드 정리